<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) 2022-2025 SpeculativeCoder (https://github.com/SpeculativeCoder)
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.2</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>adhoc</groupId>
    <artifactId>adhoc-web</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>adhoc-web</name>
    <description>adhoc-web</description>

    <modules>
        <module>adhoc-angular</module>
        <module>adhoc-core</module>
        <module>adhoc-kiosk</module>
        <module>adhoc-manager</module>
        <module>adhoc-third-party</module>
    </modules>

    <properties>
        <java.version>25</java.version>
        <guava.version>33.5.0-jre</guava.version>
        <awssdk.version>2.41.14</awssdk.version>
        <docker-java.version>3.7.0</docker-java.version>
        <exec-maven-plugin.version>3.6.3</exec-maven-plugin.version>
        <datafaker.version>2.5.3</datafaker.version>

        <!--<quartz.version>2.5.2</quartz.version>-->

        <maven.compiler.debug>true</maven.compiler.debug>
        <maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>

        <unreal.client.configuration>Development</unreal.client.configuration>
        <!--<unreal.client.configuration>Production</unreal.client.configuration>-->

        <angular.configuration>development</angular.configuration>
        <!--<angular.configuration>production</angular.configuration>-->

        <!--<adhoc.angular.customization/>-->
        <adhoc.angular.customization>,customization</adhoc.angular.customization>

    </properties>

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>software.amazon.awssdk</groupId>
                <artifactId>bom</artifactId>
                <version>${awssdk.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!--
            <dependency>
                <groupId>commons-beanutils</groupId>
                <artifactId>commons-beanutils</artifactId>
                <exclusions>
                    <exclusion>
                        <groupId>commons-logging</groupId>
                        <artifactId>commons-logging</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-configuration2</artifactId>
                <exclusions>
                    <exclusion>
                        <groupId>commons-logging</groupId>
                        <artifactId>commons-logging</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpclient</artifactId>
                <exclusions>
                    <exclusion>
                        <groupId>commons-logging</groupId>
                        <artifactId>commons-logging</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            -->

        </dependencies>
    </dependencyManagement>

    <build>
        <!--
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
        -->

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>${exec-maven-plugin.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.liquibase</groupId>
                    <artifactId>liquibase-maven-plugin</artifactId>
                    <version>${liquibase.version}</version>
                    <configuration>
                        <!--<propertyFile>liquibase.properties</propertyFile>-->
                        <driverPropertiesFile>../env/liquibase-driver.properties</driverPropertiesFile>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>

        <!--
        <profile>
            <id>angular.configuration</id>
            <activation>
                <property>
                    <name>env.ANGULAR_CONFIGURATION</name>
                </property>
            </activation>
            <properties>
                <angular.configuration>${env.ANGULAR_CONFIGURATION}</angular.configuration>
            </properties>
        </profile>

        <profile>
            <id>unreal.client.configuration</id>
            <activation>
                <property>
                    <name>env.UNREAL_CLIENT_CONFIGURATION</name>
                </property>
            </activation>
            <properties>
                <unreal.client.configuration>${env.UNREAL_CLIENT_CONFIGURATION}</unreal.client.configuration>
            </properties>
        </profile>
        -->

    </profiles>

</project>
